src/styles/_base.scss
body {
  inline-size: 100%;
  max-inline-size: 75vw;
  padding: 1em 0;
  margin: 0 auto;
  font-family: var(--font-sans);
  font-size: var(--font-size-sans);
  line-height: 1.25;
  color: var(--text-normal);
  background-color: var(--bg-color);
  background-image:
    repeating-linear-gradient(0deg, var(--flexcyon-bg-col),
    var(--flexcyon-bg-col) 1px, transparent 1px, transparent 15px),
    repeating-linear-gradient(90deg, var(--flexcyon-bg-col),
    var(--flexcyon-bg-col) 1px, transparent 1px, transparent 15px)
  ;
  will-change: scroll-position;
  --text-normal: var(--flexcyon-base-grey-light);
  --text-faint: color-mix(in oklch, var(--flexcyon-base-grey-light), #6f768599);
}

@media (width < 1000px) {
  body {
    max-inline-size: 80vw;
  }
}

* {
  box-sizing: border-box;
}

html {
  font-family: sans-serif;
}

a {
  color: var(--flexcyon-blue);
}

.sort-dropdown, .astro-code span, blockquote,
em, strong, div span, a, h1, h2, h3, h4, h5, h6, code {
  font-family: var(--font-mono);
}

.astro-code {
  border-radius: 4px;
}

.astro-code .line {
  display: block;
  padding: 4px 8px;
  white-space: pre;
}

li {
  line-height: 1.65;
}

body.theme-dark .astro-code,
body.theme-dark .astro-code span {
  color: var(--shiki-dark) !important;
}

body.theme-dark .astro-code {
  background-color: var(--shiki-dark-bg) !important;
}

blockquote {
  max-width: 45vw;
  padding: 1px 16px;
  margin-left: 0;
  background-color: var(--flexcyon-base-03);
  border-radius: 16px;
}

h1, h2, h3, h4, h5, h6,
pre.astro-code,
div, p, em, ul {
  max-width: 45vw;
  overflow: visible;
  text-overflow: clip;
  font-size: 16px;
  line-height: 1.35;
  white-space: normal;
}

@media (width < 1000px) {
  blockquote, pre.astro-code, div, p, em, ul {
    max-width: 85vw;
  }
}

p {
  margin-bottom: 1.25em;
}

h1 {
  padding-top: calc(0.05 * var(--h1-size, 1.81803em)); 
  font-size: var(--h1-size, 1.81803em);
  font-weight: 700;
  line-height: 1.61;
  color: var(--h1-color, var(--flexcyon-blue));
}

h2 {
  padding-top: calc(0.15 * var(--h2-size, 1.61803em)); 
  font-size: var(--h2-size, 1.61803em);
  font-weight: 675;
  line-height: 1.41;
  color: var(--h2-color, var(--flexcyon-purple-lilac));
}

h3 {
  padding-top: calc(0.25 * var(--h3-size, 1.41803em));
  font-size: var(--h3-size, 1.41803em);
  font-weight: 650;
  line-height: 1.31;
  color: var(--h3-color, var(--flexcyon-cyan));
}

h4 {
  padding-top: calc(0.45 * var(--h4-size, 1.21803em));
  font-size: var(--h4-size, 1.21803em);
  font-weight: 625;
  line-height: 1.21;
  color: var(--h4-color, var(--flexcyon-pink));
}

h5 {
  font-size: 1.11803em;
  font-weight: 600;
  line-height: 1.11;
  color: var(--flexcyon-lime-green);
}

h6 {
  font-size: 1.01803em;
  font-weight: 575;
  line-height: 1.01;
  color: var(--flexcyon-yellow);
}

hr {
  max-width: 45vw;
  margin-top: 24px;
  margin-bottom: 24px;
  margin-left: 0;
  color: var(--text-faint);
  opacity: 0.55;
}

@media (width < 1000px) {
  hr, p.foot, footer {
    max-width: 85vw;
  }
}

@media (width < 1000px) {
  img {
    max-width: 85vw;
  }
}

img {
  max-width: 45vw;
}

/* Line numbers via CSS counters */
.content-wrapper {
  counter-reset: line-num;
}

.content-wrapper ul,
.content-wrapper ol {
  padding-left: 0;
}

.content-wrapper li {
  margin-left: 30px;
  list-style-position: outside;
}

.content-wrapper > p:not(.foot, .cta, .cta2, .cta3),
.content-wrapper > h1,
.content-wrapper > h2,
.content-wrapper > h3,
.content-wrapper > h4,
.content-wrapper > ul > li,
.content-wrapper > ol > li,
.content-wrapper > blockquote,
.content-wrapper > pre,
.content-wrapper > table,
.content-wrapper .markdown-content p,
.content-wrapper .markdown-content h1,
.content-wrapper .markdown-content h2,
.content-wrapper .markdown-content h3,
.content-wrapper .markdown-content h4,
.content-wrapper .markdown-content li,
.content-wrapper .markdown-content pre,
.content-wrapper .markdown-content table,
.content-wrapper .markdown-content blockquote,
.content-wrapper .blog-card {
  position: relative;
  counter-increment: line-num;
}

.content-wrapper > blockquote,
.content-wrapper > pre,
.content-wrapper > table,
.content-wrapper > .blog-card,
.content-wrapper .markdown-content pre,
.content-wrapper .markdown-content table,
.content-wrapper .markdown-content blockquote {
  padding-top: 0.5em;
}

.content-wrapper > p:not(.foot, .cta, .cta2, .cta3)::before,
.content-wrapper > h1::before,
.content-wrapper > h2::before,
.content-wrapper > h3::before,
.content-wrapper > h4::before,
.content-wrapper > ul > li::before,
.content-wrapper > ol > li::before,
.content-wrapper > blockquote::before,
.content-wrapper > pre::before,
.content-wrapper > table::before,
.content-wrapper .markdown-content p::before,
.content-wrapper .markdown-content h1::before,
.content-wrapper .markdown-content h2::before,
.content-wrapper .markdown-content h3::before,
.content-wrapper .markdown-content h4::before,
.content-wrapper .markdown-content li::before,
.content-wrapper .markdown-content pre::before,
.content-wrapper .markdown-content table::before,
.content-wrapper .markdown-content blockquote::before,
.content-wrapper .blog-card::before {
  position: absolute;
  top: 0;
  right: 100%;
  width: 3rem;
  padding: 0;
  margin-right: 0.5rem;
  font-family: DepartureMono, "Maple Mono Medium", ui-monospace, monospace;
  font-size: 0.78rem;
  color: var(--text-faint);
  text-align: right;
  pointer-events: none;
  user-select: none;
  content: counter(line-num);
  opacity: 0.5;
}

.content-wrapper > h1::before,
.content-wrapper > h2::before,
.content-wrapper > h3::before,
.content-wrapper > h4::before,
.content-wrapper .markdown-content h1::before,
.content-wrapper .markdown-content h2::before,
.content-wrapper .markdown-content h3::before,
.content-wrapper .markdown-content h4::before {
  top: 1rem;
}

.content-wrapper > blockquote::before,
.content-wrapper > pre::before,
.content-wrapper > table::before,
.content-wrapper > .blog-card::before,
.content-wrapper .markdown-content pre::before,
.content-wrapper .markdown-content table::before,
.content-wrapper .markdown-content blockquote::before {
  top: 0.5em;
}

.content-wrapper > ul > li::before,
.content-wrapper > ol > li::before,
.content-wrapper .markdown-content li::before {
  width: 4.5rem;
  right: calc(100% + 29px); 
}

/* Nested content inside blockquote/pre/li shouldn't get their own line number */
.content-wrapper blockquote p,
.content-wrapper blockquote li,
.content-wrapper pre code,
.content-wrapper li p {
  counter-increment: none;
}

.content-wrapper blockquote p::before,
.content-wrapper blockquote li::before,
.content-wrapper pre code::before,
.content-wrapper li p::before {
  display: none;
}

strong {
  font-weight: 900;
  color: var(--flexcyon-red-salmon);
}

em {
  color: var(--text-accent);
}

code {
  font-size: var(--font-size-mono, 1rem);
  background-color: var(--flexcyon-base-03);
}

